<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/examine_main_menu1_bg">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_marginLeft="80px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_step1"
            style="@style/text_black"
            android:text="@string/opra_tip"
            android:textSize="20px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:src="@mipmap/examine_step2" />

        <TextView
            android:id="@+id/tv_step2"
            style="@style/text_mgray"
            android:text="@string/measure_process"
            android:textSize="20px" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:src="@mipmap/examine_step2" />


        <TextView
            android:id="@+id/tv_step3"
            style="@style/text_mgray"
            android:text="@string/measure_result"
            android:textSize="20px" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_step1_alarm"
        style="@style/text_white"
        android:layout_width="1540px"
        android:layout_height="130px"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/vs_step2"
        android:gravity="center"
        android:text="@string/examine_body_tip1"
        android:textSize="30px" />


    <LinearLayout
        android:id="@+id/ll_step1"
        android:layout_width="match_parent"
        android:layout_height="490px"
        android:layout_above="@id/tv_step1_alarm"
        android:layout_marginBottom="178px"
        android:layout_marginRight="375px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:layout_marginLeft="80px"
            android:src="@mipmap/body_step1" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:src="@mipmap/examine_step" />

        <ImageView
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:src="@mipmap/body_step2" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:src="@mipmap/examine_step" />


        <ImageView
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:src="@mipmap/body_step3" />

    </LinearLayout>

    <ViewStub
        android:id="@+id/vs_step2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/viewstub_examine_body2" />

    <ViewStub
        android:id="@+id/vs_step3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/viewstub_examine_body3" />


</RelativeLayout>