<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/examine_main_menu2_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_marginLeft="80px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_step1"
            style="@style/text_black"
            android:text="@string/opra_tip"
            android:textSize="20px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:src="@mipmap/examine_step2" />

        <TextView
            android:id="@+id/tv_step2"
            style="@style/text_mgray"
            android:text="@string/measure_process"
            android:textSize="20px" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:src="@mipmap/examine_step2" />


        <TextView
            android:id="@+id/tv_step3"
            style="@style/text_mgray"
            android:text="@string/measure_result"
            android:textSize="20px" />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_bar_step3"
        android:layout_width="1540px"
        android:layout_height="130px"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:visibility="gone">


        <ImageView
            android:id="@+id/iv_reexamine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="340px"
            android:layout_toRightOf="@id/iv_report"
            android:src="@mipmap/examine_retest_o" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80px"
            android:src="@mipmap/examine_start_next" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_step1_alarm"
        style="@style/text_white"
        android:layout_width="1540px"
        android:layout_height="130px"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/examine_body_tip1"
        android:textSize="30px" />

    <LinearLayout
        android:id="@+id/ll_step1"
        android:layout_width="match_parent"
        android:layout_height="490px"
        android:layout_above="@id/tv_step1_alarm"
        android:layout_marginBottom="178px"
        android:layout_marginRight="375px"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:src="@mipmap/bo_step1" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:src="@mipmap/examine_step" />

        <ImageView
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:src="@mipmap/bo_step2" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_step23"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="130px"
        android:layout_marginRight="375px"
        android:layout_marginTop="226px"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/text_gray"
                    android:text="血氧饱和度"
                    android:textSize="26px" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                        android:id="@+id/tv_spo2"
                        style="@style/text_gray"
                        android:drawableLeft="@mipmap/bloodo_xygen"
                        android:drawablePadding="10px"
                        android:text="0"
                        android:textSize="112px" />

                    <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                        style="@style/text_gray"
                        android:layout_marginLeft="10px"
                        android:text="%"
                        android:textSize="38px" />

                </LinearLayout>

            </LinearLayout>


            <View
                android:layout_width="1px"
                android:layout_height="100px"
                android:layout_marginLeft="150px"
                android:layout_marginRight="150px"
                android:background="@color/mmgray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/text_gray"
                    android:paddingRight="30px"
                    android:text="脉搏数"
                    android:textSize="26px" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                        android:id="@+id/tv_pr"
                        style="@style/text_gray"
                        android:drawableLeft="@mipmap/bloodo_pulse"
                        android:drawablePadding="10px"
                        android:text="0"
                        android:textSize="112px" />

                    <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                        style="@style/text_gray"
                        android:layout_marginLeft="10px"
                        android:text="bpm"
                        android:textSize="38px" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="166px"
                    android:layout_height="166px">

                    <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                        style="@style/text_gray"
                        android:layout_centerInParent="true"
                        android:text="94%"
                        android:textSize="32px" />

                    <com.healthmall.sail.cat_doctor.widget.CircleProgressView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:progressColor="@color/circle_gray"
                        app:progressWidth="15px" />

                </RelativeLayout>

                <TextView
                    style="@style/text_mgray"
                    android:layout_marginTop="20px"
                    android:text="正常范围值"
                    android:textSize="20px" />

                <TextView
                    style="@style/text_mgray"
                    android:layout_marginTop="30px"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="10px"
                    android:text="@string/blood_o_tip_high"
                    android:textSize="16px" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="211px"
                android:layout_marginRight="211px"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="324px"
                    android:layout_height="324px">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                            android:id="@+id/tv_bloodo"
                            style="@style/text_blue"
                            android:text="0%"
                            android:textSize="72px"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_bloodo_tip"
                            style="@style/text_blue"
                            android:text="血氧正常"
                            android:textSize="20px" />
                    </LinearLayout>


                    <com.healthmall.sail.cat_doctor.widget.CircleProgressView
                        android:id="@+id/cpv_bloodo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:progressColor="@color/blue"
                        app:progressWidth="25px" />

                </RelativeLayout>

                <TextView
                    style="@style/text_gray"
                    android:layout_marginTop="30px"
                    android:text="您的血氧饱和度"
                    android:textSize="26px" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="166px"
                    android:layout_height="166px">

                    <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                        style="@style/text_gray"
                        android:layout_centerInParent="true"
                        android:text="90%"
                        android:textSize="32px" />


                    <com.healthmall.sail.cat_doctor.widget.CircleProgressView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:progressColor="@color/circle_gray"
                        app:progressWidth="15px" />

                </RelativeLayout>

                <TextView
                    style="@style/text_mgray"
                    android:layout_marginTop="20px"
                    android:text="过低范围值"
                    android:textSize="20px" />

                <TextView
                    style="@style/text_mgray"
                    android:layout_marginTop="30px"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="10px"
                    android:text="@string/blood_o_tip_low"
                    android:textSize="16px" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>