<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/examine_main_menu4_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_marginLeft="80px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black"
            android:text="面诊"
            android:textSize="20px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:src="@mipmap/examine_step2" />

        <TextView
            style="@style/text_mgray"
            android:text="舌诊"
            android:textSize="20px" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_camera_tip"
        style="@style/text_white"
        android:layout_width="1540px"
        android:layout_height="130px"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/sys_is_analying_face"
        android:textSize="30px" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="1540px"
        android:layout_height="130px"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:visibility="gone">


        <ImageView
            android:id="@+id/iv_remake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="340px"
            android:layout_toRightOf="@id/iv_report"
            android:src="@mipmap/examine_retake_pic_face" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80px"
            android:src="@mipmap/examine_take_p_ton" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="130px"
        android:layout_marginRight="375px"
        android:layout_marginTop="246px"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tip1"
            style="@style/text_mgray"
            android:text="@string/see_ahead"
            android:textSize="24px"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_tip2"
            style="@style/text_mgray"
            android:layout_marginTop="32px"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5px"
            android:text="@string/face_examine_tip"
            android:textSize="18px"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rl_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:visibility="visible">

            <ImageView
                android:id="@+id/tv_scan_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/face_ton_scan_area" />

            <ImageView
                android:id="@+id/iv_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80px"
                android:src="@mipmap/face_ton_face_exam" />

            <ImageView
                android:id="@+id/iv_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="180px"
                android:src="@mipmap/face_ton_go" />

            <RelativeLayout
                android:layout_width="396px"
                android:layout_height="434px"
                android:layout_centerInParent="true">

                <com.wonderkiln.camerakit.CameraView
                    android:id="@+id/cv_camera"
                    android:layout_width="396px"
                    android:layout_height="434px"
                    android:adjustViewBounds="true" />

                <ImageView
                    android:id="@+id/iv_face_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60px"
                    android:src="@mipmap/face_ton_face_area" />

                <ImageView
                    android:id="@+id/iv_ton_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/face_ton_ton_area"
                    android:visibility="gone" />

            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="300px"
            android:layout_height="300px"
            android:visibility="gone"/>
        <!--

                <RelativeLayout
                    android:layout_width="300px"
                    android:layout_height="300px"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/face_ton_person" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/face_ton_circle_bg" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="100px"
                        android:src="@mipmap/face_ton_scan_line" />

                </RelativeLayout>
        -->
        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100px"
            android:src="@mipmap/face_ton_geting"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.healthmall.sail.cat_doctor.widget.FaceTonSaveProgressView
                android:id="@+id/fts_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.healthmall.sail.cat_doctor.widget.NoPaddingTextView
                android:id="@+id/tv_progress"
                style="@style/text_blue"
                android:layout_marginLeft="20px"
                android:text="80%"
                android:textSize="26px" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>